--- a/app/views/highlights/_form.html.erb
+++ b/app/views/highlights/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@highlight) do |f| %>
+<%= form_for([@crawl, @store, @highlight]) do |f| %>
   <% if @highlight.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@highlight.errors.count, "error") %> prohibited this highlight from being saved:</h2>
@@ -18,10 +18,6 @@
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
-  </div>
-  <div class="field">
-    <%= f.label :store_id %><br>
-    <%= f.text_field :store_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
