--- a/app/views/highlights/edit.html.erb
+++ b/app/views/highlights/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @highlight %> |
-<%= link_to 'Back', highlights_path %>
+<%= link_to 'Show', crawl_store_highlight_path(@crawl, @store, @highlight) %> |
+<%= link_to 'Back', crawl_store_highlights_path(@crawl, @store) %>
