--- a/app/views/highlights/new.html.erb
+++ b/app/views/highlights/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', highlights_path %>
+<%= link_to 'Back', crawl_store_highlights_path(@crawl, @store) %>
