--- a/app/views/highlights/show.html.erb
+++ b/app/views/highlights/show.html.erb
@@ -15,5 +15,5 @@
   <%= @highlight.store %>
 </p>
 
-<%= link_to 'Edit', edit_highlight_path(@highlight) %> |
-<%= link_to 'Back', highlights_path %>
+<%= link_to 'Edit', edit_crawl_store_highlight_path(@crawl, @store, @highlight) %> |
+<%= link_to 'Back', crawl_store_highlights_path(@crawl, @store) %>
