--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -5,5 +5,5 @@
   <%= @store.store_service_id %>
 </p>
 
-<%= link_to 'Edit', edit_store_path(@store) %> |
-<%= link_to 'Back', stores_path %>
+<%= link_to 'Edit', edit_crawl_store_path(@crawl, @store) %> |
+<%= link_to 'Back', crawl_stores_path(@crawl) %>
