--- a/app/assets/stylesheets/highlights.scss
+++ b/app/assets/stylesheets/highlights.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the highlights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#toc-points {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  .waypoint {
+    margin: 0;
+    padding: 0;
+  }
+}
