--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,29 +1,29 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-body {
-  font-size: 2.0000em;
-  /* 24px */
-  line-height: 1.5000em;
-  /* 36px */
-  margin-top: 0.7500em;
-  margin-bottom: 0.0000em;
-}
-
-a {
-  color: black;
-  &::active {
-    color: black;
-  }
-  &::visited {
-    color: black;
-  }
-
-}
-#wffooter {
-  padding-bottom: 300px;
-  color: white;
-  background-color: black;
-}
+// html,
+// body {
+//   margin: 0;
+//   padding: 0;
+// }
+// body {
+//   font-size: 2.0000em;
+//   /* 24px */
+//   line-height: 1.5000em;
+//   /* 36px */
+//   margin-top: 0.7500em;
+//   margin-bottom: 0.0000em;
+// }
+//
+// a {
+//   color: black;
+//   &::active {
+//     color: black;
+//   }
+//   &::visited {
+//     color: black;
+//   }
+//
+// }
+// #wffooter {
+//   padding-bottom: 300px;
+//   color: white;
+//   background-color: black;
+// }
