--- a/app/views/stores/_store_list_item.html.erb
+++ b/app/views/stores/_store_list_item.html.erb
@@ -1,1 +1,1 @@
-<li id="wp<%= store_list_item.id %>" class="active"><a href="#awp<%= store_list_item.id %>"><%= store_list_item.id %></a></li>
+<li id="wp<%= store_list_item.id %>" class="active"><a href="#awp<%= store_list_item.id %>"><%= store_list_item.store_service_id %></a></li>
